--- a/components/slider/slider.html
+++ b/components/slider/slider.html
@@ -16,11 +16,14 @@
     <script src="../../prism/prism.js" defer></script>
     <script src="../../script.js" defer></script>
     <script src="./slider.js" defer></script>
-    <title>Grid | ZestUI</title>
+    <title>Slider | ZestUI</title>
 </head>
 <body>
         <div class="container">
             <nav>
+                <div class="btnHambuger">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--charm" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M2.75 12.25h10.5m-10.5-4h10.5m-10.5-4h10.5"></path></svg>
+                </div>
                 <div class="lib-name">
                     <a href="../../index.html">ZestUI</a>
                 </div>
@@ -52,6 +55,7 @@
             </nav>
             <main>
                 <div class="content-section-container">
+                    <div class="drawer-backdrop drawer-backdrop-hide"></div>
                     <aside class="aside-left">
                         <div class="moving-container aside-left-height">
                             <div class="aside-list-container txt-align-center">
