--- a/components/button/button.css
+++ b/components/button/button.css
@@ -83,13 +83,13 @@
 }
 
 .btn-rounded{
-    border-radius: 30px;
+    border-radius: 3rem;
 }
 
 .btn-floating{
     height : 5rem;
     width : 5rem;
-    padding : 10px;
+    padding : 1rem;
     border : 3px solid var(--background-color);
     border-radius: 100%;
     font-size: 2rem;
