--- a/components/card/card.css
+++ b/components/card/card.css
@@ -1,34 +1,29 @@
 .card{
-    /* border : 3px solid red; */
     border-radius: 1rem;
     position: relative;
     width : 22rem;
     background-color: var(--temp-bg-color);
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-
+    box-shadow: 0 1rem 2rem rgba(0,0,0,0.19), 0 0.6rem 0.6rem rgba(0,0,0,0.23);
 }
 
 .card-desc-product-info{
-    /* border : 3px solid red; */
     padding : 1rem;
 }
 
 .card-desc-product-name{
     padding-top : 0.5rem;
     color : var(--stone-500);
-    /* font-weight: bold; */
 }
 
 .card-desc-price-container{
-    padding : 0 10px 10px 10px;
+    padding : 0 1rem 1rem 1rem;
 }
 
 .card-reactions{
     display: flex;
     justify-content : flex-end;
     align-items : center;
-    padding :10px;
-    /* border : 3px solid red; */
+    padding :1rem;
 }
 
 .card-desc-brand{
@@ -42,47 +37,44 @@
 }
 
 .card-img{
-    height : 280px;
+    height : 28rem;
     width : 100%;
     position: relative;
-    /* border : 3px solid greenyellow; */
 }
 .product-img{
     width : 100%;
     height : 100%;
     object-fit: cover;
     object-position: center;
-    border-radius: 10px;
+    border-radius: 1rem;
 }
 
 .add-to-cart{
-    width : 25px;
-    height : 25px;
-    margin : 0 5px 0 5px;
+    width : 2.5rem;
+    height : 2.5rem;
+    margin : 0 0.5rem 0 0.5rem;
     cursor: pointer;
 }
 
 .share{
-    width : 20px;
-    height : 20px;
-    margin : 0 5px 0 5px;
+    width : 2rem;
+    height : 2rem;
+    margin : 0 0.5rem 0 0.5rem;
     cursor: pointer;
 }
 
 .wishlist{
     position: absolute;
-    top : 10px;
-    right : 10px;
-    width : 25px;
-    height : 25px;
-    /* border: 3px solid red; */
+    top : 1rem;
+    right : 1rem;
+    width : 2.5rem;
+    height : 2.5rem;
 }
 
 .wishlist svg{
     width : 100%;
     height : 100%;
     cursor: pointer;
-    
 }
 
 .wishlist svg:hover{
@@ -91,9 +83,8 @@
 
 .card-badge-container{
     position: absolute;
-    top : 10px;
+    top : 1rem;
     left : 0;
-    /* border : 3px solid red; */
     background-color : var(--card-badge-bg-color);
     width : 30%;
 }
@@ -170,5 +161,5 @@
 /********************************** card with shadow  *****************************/
 
 .card-with-shadow{
-    box-shadow: 5px 5px 8px var(--dark-gray);
+    box-shadow: 0.5rem 0.5rem 0.5rem var(--dark-gray);
 }
