--- a/components/slider/slider.css
+++ b/components/slider/slider.css
@@ -6,15 +6,13 @@
 
 .slider-container{
     width : 30rem;
-    /* height : 6.15rem; */
-    /* border : 3px solid green; */
 }
 
 .slider{
     -webkit-appearance: none;
     width : 100%;
     height : 1rem;
-    border-radius: 8px;
+    border-radius: 0.8rem;
     background-color : var(--background-color);
 }
 
@@ -30,7 +28,7 @@
 .progress{
     width : 50%;
     height : 1rem;
-    border-radius: 8px;
+    border-radius: 0.8rem;
     position : absolute;
     top : 32%;
     left : 0;
@@ -53,5 +51,4 @@
 
 .position-relative{
     position: relative;
-    /* border: 3px solid red; */
 }
