--- a/components/snackbar/snackbar.css
+++ b/components/snackbar/snackbar.css
@@ -1,8 +1,7 @@
 .snackbar{
     display : flex;
     align-items : center;
-    /* border : 3px solid red; */
-    border-radius: 5px;
+    border-radius: 0.5rem;
     width : 45rem;
     padding : 0.8rem 1.5rem;
     color : var(--background-color);
@@ -17,7 +16,7 @@
     color : var(--snackbar-btn-color);
     margin-left: auto;
     padding : 0.5rem 0.8rem;
-    border-radius: 5px;
+    border-radius: 0.5rem;
     background-color : inherit;
     cursor : pointer;
     border : 0;
@@ -29,7 +28,6 @@
 }
 
 .dismiss{
-    /* border : 3px solid red; */
     width : 2.5rem;
     height : 2.5rem;
 }
