--- a/CSS/documentation.css
+++ b/CSS/documentation.css
@@ -281,7 +281,7 @@ main{
 }
 
 .checkbox-label {
-    background-color: #111;
+    background-color: var(--dark-mode-toggle-bg-color);
     width: 50px;
     height: 26px;
     border-radius: 50px;
@@ -298,7 +298,7 @@ main{
 .fa-sun {color: var(--sun-color);}
   
 .checkbox-label .ball {
-    background-color: #fff;
+    background-color: var(--toggle-ball-color);
     width: 22px;
     height: 22px;
     position: absolute;
@@ -317,7 +317,6 @@ main{
   }
 
 .drawer-backdrop{
-      /* display : none; */
       width : 100%;
       position : fixed;
       top : 0;
@@ -402,10 +401,10 @@ main{
         left : 0;
         width : 50%;
         height : 100vh;
-        background-color : white;
+        background-color : var(--white);
         transform: translateX(-150%);
         transition : all 0.2s ease-in-out;
-        color : black;
+        color : var(--black);
     }
 
     .aside-list-container h3{
