--- a/CSS/main.css
+++ b/CSS/main.css
@@ -57,7 +57,7 @@ main{
     display: flex;
     align-items: center;
     justify-content : center;
-    color : #fffafa;
+    color : var(--temp-bg-color);
 }
 
 .btn-flex-container{
